Bug 508989 - Payer/Payee field in entry form does not grab from dropdown when hitting TAB
Summary: Payer/Payee field in entry form does not grab from dropdown when hitting TAB
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Other Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-01 00:36 UTC by rsermers
Modified: 2025-09-01 17:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rsermers 2025-09-01 00:36:37 UTC
SUMMARY
When entering a new transaction into any account, typing in the Payer/Payee field opens a dropdown list, but hitting TAB does not grab the first entry in the list like it did in version 4.5 of KmyMoney.

STEPS TO REPRODUCE
1. Start New Transaction into any account
2. Start typing in Payer/Payee field
3. Hit TAB to select the first item in the dropdown list


OBSERVED RESULT
Dropdown list item is not selected and the "New payee/receiver" form is opened.   

EXPECTED RESULT
Expect first item in dropdown list to be selected when hitting TAB.  This is what happened in KmyMoney 4.5 before I upgraded to 5.2.x.   Not having this function requires extra user entries like arrowing down or selecting with mouse for TAB'ing to next field.  

SOFTWARE/OS VERSIONS
Windows: 11


ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2025-09-01 10:28:38 UTC
Note to self: the first matching entry needs to be selected when the field contents changes so that this works as expected (see behavior in category)
Comment 2 Thomas Baumgart 2025-09-01 17:13:30 UTC
Git commit 5213e86c5383ac318514b4ef097a2d6dc4f43c29 by Thomas Baumgart.
Committed on 01/09/2025 at 17:12.
Pushed by tbaumgart into branch 'master'.

Focus out on payee widget takes the selected payee from the popup

Hitting TAB in the payee widget only asks to create a new payee if the
name is not on file and the popup is not visible. In case the popup
contains a selected entry, that name is used.
FIXED-IN: 5.2.2

M  +32   -3    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/5213e86c5383ac318514b4ef097a2d6dc4f43c29
Comment 3 Thomas Baumgart 2025-09-01 17:13:51 UTC
Git commit 0dbd9129db67f7cb741f0dccb9fad5c60a5d32f0 by Thomas Baumgart.
Committed on 01/09/2025 at 17:13.
Pushed by tbaumgart into branch '5.2'.

Focus out on payee widget takes the selected payee from the popup

Hitting TAB in the payee widget only asks to create a new payee if the
name is not on file and the popup is not visible. In case the popup
contains a selected entry, that name is used.
FIXED-IN: 5.2.2
(cherry picked from commit 5213e86c5383ac318514b4ef097a2d6dc4f43c29)

M  +32   -3    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/0dbd9129db67f7cb741f0dccb9fad5c60a5d32f0